--- a/index.html
+++ b/index.html
@@ -2,64 +2,70 @@
 <head></head>
 <body>
     
-<h1>Table of contents</h1>
-
-    <ol>
-        <li>eZ Exceed
-            <ul>
-                <li>Introduction</li>
-                <li>License</li>
-                <li>Download</li>
-            </ul>
+<h2>Ezexceed</h2>
+    <ul>
+        <li><a href="#introduction">Introduction</a>
+        </li>,
+        <li><a href="#license">License</a>
+        </li>,
+        <li><a href="#download">Download</a>
         </li>
-        <li>Installing
-            <ul>
-                <li>Common</li>
-                <li>eZ 4</li>
-                <li>eZ 5</li>
-            </ul>
+    </ul>
+    <h2>Installing</h2>
+    <ul>
+        <li><a href="#common">Common</a>
         </li>
-        <li>Site configuration
-            <ul>
-                <li>Content classes
-                    <ul>
-                        <li>Content class icons</li>
-                        <li>Field definition setup</li>
-                    </ul>
-                </li>
-                <li>Push notifications</li>
-            </ul>
+    </ul>
+    <h2>Site-configuration</h2>
+    <ul>
+        <li><a href="#site-configuration-content-types">ContentTypes</a>
+        </li>,
+        <li><a href="#site-configuration-preview-url">Shareable preview URLs</a>
         </li>
-        <li>Extensibility
-            <ul>
-                <li>Building a datatype for eZ Exceed</li>
-                <li>APIs</li>
-                <li>Creating an app</li>
-            </ul>
+    </ul>
+    <h2>Extensibility</h2>
+    <ul>
+        <li><a href="#extensibility-building-a-datatype">Building a datatype for eZ Exceed</a>
+        </li>,
+        <li><a href="#extensibility-apis">APIs</a>
+        </li>,
+        <li><a href="#extensibility-creating-an-app">Creating an app</a>
         </li>
-        <li>Best practice deployment
-            <ul>
-                <li>SQL</li>
-                <li>Other extensions</li>
-                <li>Server side support</li>
-                <li>Security</li>
-            </ul>
+    </ul>
+    <h2>Best-practice-deployment</h2>
+    <ul>
+        <li><a href="#deployment-sql">SQL</a>
+        </li>,
+        <li><a href="#deployment-extensions">Other extensions</a>
+        </li>,
+        <li><a href="#deployment-server-side">Server side support</a>
+        </li>,
+        <li><a href="#deployment-security">Security</a>
         </li>
-        <li>Contributing
-            <ul>
-                <li>Submitting an issue</li>
-                <li>Translations</li>
-                <li>Patches</li>
-                <li>Technologies / libraries?</li>
-            </ul>
+    </ul>
+    <h2>Contributing</h2>
+    <ul>
+        <li><a href="#contributing-submitting-an-issue">Submitting an issue</a>
+        </li>,
+        <li><a href="#contributing-translations">Translations</a>
+        </li>,
+        <li><a href="#contributing-patches">Patches</a>
+        </li>,
+        <li><a href="#contributing-technologies">Technologies / libraries?</a>
         </li>
-        <li>Disclaimers
-            <ul>
-                <li>Browser support</li>
-            </ul>
+    </ul>
+    <h2>Disclaimers</h2>
+    <ul>
+        <li><a href="#disclaimers-supported-web-browsers">Supported web browsers</a>
+        </li>,
+        <li><a href="#disclaimers-extensions">Extensions</a>
         </li>
-        <li>Getting help / Troubleshooting</li>
-    </ol>
+    </ul>
+    <h2>Getting-help-troubleshooting</h2>
+    <ul>
+        <li><a href="#getting-help-faq">Frequently Asked Questions</a>
+        </li>
+    </ul>
     
 <h1>eZ Exceed</h1>
 
