Include prism.js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="author" href="http://haraldson.ch/" />
         <link rel="icon" href="gfx/favicon.png" type="image/png" />
         <link rel="shortcut icon" href="gfx/favicon.png" type="image/png" />
+        <link type="text/css" rel="stylesheet" href="assets/prism.css" />
     </head>
     
     <body>
@@ -373,6 +374,7 @@ ID=&lt;yourid&gt;</code></pre>
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="assets/prism.js"></script>
     </body>
 
 </html>
