--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                         </li>
                         <li>
                             <p>Run the included SQL script to add eZ Exceed specifics to your database</p>
-                            <p> <code>mysql -h host -u user -D my-database-name -p &lt; sql/mysql/schema.sql</code>
-                            </p>
+<pre><code class="lang-bash"> mysql -h host -u user -D my-database-name -p &lt; sql/mysql/schema.sql</code></pre>
+
                         </li>
                         <li>
                             <p>Activate the eZ Exceed extension in for every siteaccess where you want eZ Exceed enabled. In <code>site.ini</code>:</p>
