--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <head>
         <meta charset="utf-8" />
         <title>eZ Exceed guide</title>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/screen.css" />
         <link rel="made" href="http://www.keyteq.no/" title="Keyteq Labs" />
         <link rel="author" href="http://www.keyteq.no/" />
-        <link rel="icon" href="gfx/favicon.png" type="image/png" />
-        <link rel="shortcut icon" href="gfx/favicon.png" type="image/png" />
-        <link type="text/css" rel="stylesheet" href="assets/prism.css" />
+        <link rel="icon" href="/assets/gfx/favicon.png" type="image/png" />
+        <link rel="shortcut icon" href="/assets/gfx/favicon.png" type="image/png" />
+        <link type="text/css" rel="stylesheet" href="assets/css/01-bootstrap.min.css" />
+        <link type="text/css" rel="stylesheet" href="assets/css/02-bootstrap-responsive.min.css" />
+        <link type="text/css" rel="stylesheet" href="assets/css/03-screen.css" />
     </head>
     
     <body>
@@ -374,10 +373,10 @@ ID=&lt;yourid&gt;</code></pre>
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="assets/prism.js"></script>
-        <script type="text/javascript" src="assets/prism-ini.js"></script>
-        <script type="text/javascript" src="assets/prism-smarty.js"></script>
-        <script type="text/javascript" src="assets/prism-twig.js"></script>
+        <script type="text/javascript" src="assets/js/prism.js"></script>
+        <script type="text/javascript" src="assets/js/prism-ini.js"></script>
+        <script type="text/javascript" src="assets/js/prism-smarty.js"></script>
+        <script type="text/javascript" src="assets/js/prism-twig.js"></script>
     </body>
 
 </html>
