Move prism.css to make it load, re-enable anchors.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="shortcut icon" href="/assets/gfx/favicon.png" type="image/png" />
         <link type="text/css" rel="stylesheet" href="assets/css/01-bootstrap.min.css" />
         <link type="text/css" rel="stylesheet" href="assets/css/02-bootstrap-responsive.min.css" />
-        <link type="text/css" rel="stylesheet" href="assets/css/03-screen.css" />
+        <link type="text/css" rel="stylesheet" href="assets/css/03-prism.css" />
+        <link type="text/css" rel="stylesheet" href="assets/css/04-screen.css" />
     </head>
     
     <body>
