--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                     <p>The main interaction pattern in eZ Exceed is the stack:</p>
                     <p>
-                        <img src="assets/gfx/01-stack.png">
+                        <img src="assets/img/01-stack.png">
                     </p>
                     <p>The stack allows editors to work with layered content without leaving the initial context. As the example screenshot shows the stack has a context path with <code>Sitemap -&gt; Object edit -&gt; Add location</code> and it makes it easy to see this <em>breadcrumb</em> as
                         well as jump in it.</p>
