--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ ClassMap[pin]=Pushpin.png</code></pre>
                     
 <h3>Naming</h3>
 
-                    <p>Take care in naming FieldDefinition, descriptions and states. Make it crystal clear and easy to understand. This makes up a good part of the experience – make it great.</p>
+                    <p>Take care in naming FieldDefinitions, descriptions and states. Make it crystal clear and easy to understand. This makes up a good part of the experience – make it great.</p>
                     
 <h3>Righty tighty</h3>
 
