--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>eZ Exceed guide</title>
         <link rel="made" href="http://www.keyteq.no/" title="Keyteq Labs" />
         <link rel="author" href="http://www.keyteq.no/" />
-        <link rel="icon" href="/assets/gfx/favicon.png" type="image/png" />
-        <link rel="shortcut icon" href="/assets/gfx/favicon.png" type="image/png" />
+        <link rel="icon" href="assets/gfx/favicon.png" type="image/png" />
+        <link rel="shortcut icon" href="assets/gfx/favicon.png" type="image/png" />
         <link type="text/css" rel="stylesheet" href="assets/css/01-bootstrap.min.css" />
         <link type="text/css" rel="stylesheet" href="assets/css/02-bootstrap-responsive.min.css" />
         <link type="text/css" rel="stylesheet" href="assets/css/03-prism.css" />
@@ -123,7 +123,7 @@
 
                     <p>The main interaction pattern in eZ Exceed is the stack:</p>
                     <p>
-                        <img src="assets/img/01-stack.png">
+                        <img src="assets/img/01-stack.png" alt="The Stack">
                     </p>
                     <p>The stack allows editors to work with layered content without leaving the initial context. As the example screenshot shows the stack has a context path with <code>Sitemap -&gt; Object edit -&gt; Add location</code> and it makes it easy to see this <em>breadcrumb</em> as
                         well as jump in it.</p>
@@ -159,7 +159,7 @@
  git clone git@github.com:KeyteqLabs/ezexceed.git
  cd ezexceed</code></pre>
 
-                            <p>eZ Exceed is currently only available as an <em>extension</em>. If you are running on eZ Publish 5, you have to put it in legacy mode and install it in your <code>/ezpublish_legacy/extension/</code> folder.</p>
+                            <p>eZ Exceed is currently only available as an <em>extension</em>. If you are running on eZ Publish 5, you have to enable legacy mode and install the eZ Exceed extension in your <code>/ezpublish_legacy/extension/</code> folder.</p>
                         </li>
                         <li>
                             <p>Run the included SQL script to add eZ Exceed specifics to your database</p>
