Rename to 'Core principles'

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </ul>
                     <h2>Important-concepts</h2>
                     <ul>
-                        <li><a href="#important-concepts-core-principles">Our core principles are</a>
+                        <li><a href="#important-concepts-core-principles">Core principles</a>
                         </li>
                         <li><a href="#important-concepts-the stack">The Stack</a>
                         </li>
@@ -260,7 +260,7 @@ ID=&lt;yourid&gt;</code></pre>
 
                     <p>There are a few important concepts in eZ Exceed you need to grasp in order to use it, implement for it and customise it.</p>
                     
-<h2><a id="important-concepts-core-principles" href="#important-concepts-core-principles"></a> Our core principles are</h2>
+<h2><a id="important-concepts-core-principles" href="#important-concepts-core-principles"></a> Core principles</h2>
 
                     <ul>
                         <li>Touch first</li>
