Write it out, increase the chances for it being honored.

--- a/index.html
+++ b/index.html
@@ -209,7 +209,10 @@ contentclass[fieldname]=half</code></pre>
 <h3>Make use of FieldDefinitionGroups</h3>
 
                     <p>Group FieldDefinitions (e.g meta information) enabling the editor to open or close a group of FieldDefinitions. Another example for grouping is global attributes, e.g footer information, or other static information. You can create FieldDefinitionGroups
-                        in <code>content.ini</code>.</p>
+                        in <code>override/content.ini.append.php</code>:</p>
+<pre><code class="lang-ini">[ClassAttributeSettings]
+CategoryList[footer]=Footer fields</code></pre>
+
                     
 <h2><a id="site-configuration-text-editor" href="#site-configuration-text-editor"></a> Text editor</h2>
 
