--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ CategoryList[footer]=Footer fields</code></pre>
                     
 <h3>eZ Exceed improved link</h3>
 
-                    <p>eZ Exceed provides a better way to link to <em>Locations</em> – not only <em>Contents</em>. This is an editor plugin, and needs to be activated in the override settings, in <code>ezoe.ini</code>:</p>
+                    <p>eZ Exceed provides a better way to link to <em>Locations</em> – not only <em>Contents</em>. This is an editor plugin, and needs to be activated in the override settings, in <code>override/ezoe.ini.append.php</code>:</p>
 <pre><code class="lang-ini">[EditorSettings]
 Plugins[]=ezexceedlink
 
