--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </ul>
                     <h2>Extensibility</h2>
                     <ul>
-                        <li><a href="#extensibility-building-a-datatype">Building a datatype for eZ Exceed</a>
+                        <li><a href="#extensibility-building-a-datatype">Building a FieldType for eZ Exceed</a>
                         </li>
                         <li><a href="#extensibility-creating-an-app">Creating an app</a>
                         </li>
@@ -315,7 +315,7 @@ ID=&lt;yourid&gt;</code></pre>
 <h1>Extensibility</h1>
 
                     
-<h2><a id="extensibility-building-a-datatype" href="#extensibility-building-a-datatype"></a> Building a datatype for eZ Exceed</h2>
+<h2><a id="extensibility-building-a-datatype" href="#extensibility-building-a-datatype"></a> Building a FieldType for eZ Exceed</h2>
 
                     <p>Building FieldTypes that supports the eZ Exceed interface can require a custom design implementation for eZ Exceed. If your interface only requires basic controls like <code>input</code> fields this is supported out of the box, but if you have custom interaction
                         in your FieldType you are required to implement this in a custom <code>ezexceed</code> design.</p>
