It's implicit that settings are located in the settings folder.

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                     <p>In order to make it even easier to identify the different ContentTypes and tell them apart, assign unique icons to them. Unique icons for each ContentType makes for a much clearer interface, and editors will be more efficient if you set an icon, so please
                         do.</p>
-                    <p>Create or edit the global <code>settings/override/icon.ini.append.php</code>:</p>
+                    <p>Create or edit the global <code>override/icon.ini.append.php</code>:</p>
 <pre><code class="lang-ini">[ClassIcons]
 ClassMap[recipe]=Food.png
 ClassMap[cookbook]=Book.png
@@ -351,7 +351,7 @@ ID=&lt;yourid&gt;</code></pre>
                     
 <h4>render</h4>
 
-                    <p>This method will be called when it&#39;s time for your GUI to display itself</p>
+                    <p>This method will be called when it&#39;s time for your GUI to display itself.</p>
                     
 <h4>parseEdited</h4>
 
