--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                             </ul>
                         </li>
                         <li>
-                            <p>Install extension into /my/ez/extension/ezexceed</p>
+                            <p>Install extension into <code>/my/ez/extension/ezexceed</code>
+                            </p>
 <pre><code class="lang-bash"> cd /my/ez/extension
  git clone git@github.com:KeyteqLabs/ezexceed.git
  cd ezexceed</code></pre>
