--- a/index.html
+++ b/index.html
@@ -411,11 +411,9 @@ ID=&lt;yourid&gt;</code></pre>
                     
 <h3>I can&#39;t see any changes even though I have published them. Why?</h3>
 
-                    <ol>
-                        <li>Very often this is because a site is configured with two translation languages where one is the default used for editing, and the other is the one actually being displayed. Ensure you are editing the correct translation, and if both languages are not
-                            used, make sure it is removed from the installation.</li>
-                        <li>If <strong>#1</strong> did not work, the issue is often cache blocks that are overly eager.</li>
-                    </ol>
+                    <p>Very often this is because a site is configured with two translation languages where one is the default used for editing, and the other is the one actually being displayed. Ensure you are editing the correct translation, and if both languages are not
+                        used, make sure it is removed from the installation.</p>
+                    <p>If this doesn&#39;t solve your problem, overly eager cache blocks are often to blame.</p>
                     
 <h3>I can&#39;t see my changes without publishing. Why?</h3>
 
