--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ CategoryList[footer]=Footer fields</code></pre>
                     
 <h3>eZ Exceed improved link</h3>
 
-                    <p>eZ Exceed provides a better way to link to <em>Locations</em> – not only <em>Contents</em>. This is an editor plugin, and needs to be activated in the override settings, in <code>override/ezoe.ini.append.php</code>. Remember to add it to every editor layout
-                        it should be available for:</p>
+                    <p>eZ Exceed provides a better way to link to <em>Locations</em> – not only <em>Contents</em>. This is an editor plugin, and needs to be activated in the override settings, in <code>override/ezoe.ini.append.php</code>. Remember to add the button to all the
+                        editor layouts where you want it available:</p>
 <pre><code class="lang-ini">[EditorSettings]
 Plugins[]=ezexceedlink
 
