Underscore -> Lo-Dash

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ ID=&lt;yourid&gt;</code></pre>
                     <p>Technologies used in eZ Exceed include, but are not limited to:</p>
                     <ul>
                         <li>Backbone.js (1.0)</li>
-                        <li>Underscore.js (1.4)</li>
+                        <li>Lo-Dash (1.2.1)</li>
                         <li>jQuery (1.9)</li>
                         <li>jQuery UI</li>
                         <li>moment.js</li>
