--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                             </li>
                             <li><a href="#contributing-technologies">Technologies</a>
                             </li>
+                            <li><a href="#contributing-coding-standard">Coding standard</a>
+                            </li>
                         </ul>
                         <h2>Faq</h2>
                         <ul>
@@ -403,6 +405,10 @@ ID=&lt;yourid&gt;</code></pre>
                         <li>Handlebars.js</li>
                         <li>Require.js</li>
                     </ul>
+                    
+<h2><a id="contributing-coding-standard" href="#contributing-coding-standard"></a> Coding standard</h2>
+
+                    <p>We follow the PHP Framework Interoperability Group&#39;s <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md">coding standard</a>, and any submissions must comply.</p>
                     
 <h1>Frequently Asked Questions</h1>
 
