--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <title>eZ Exceed guide</title>
         <link type="text/css" rel="stylesheet" href="assets/css/01-bootstrap.min.css" />
         <link type="text/css" rel="stylesheet" href="assets/css/02-bootstrap-responsive.min.css" />
