A little more verbose discalimer on ez form token

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ ID=&lt;yourid&gt;</code></pre>
                     
 <h3>eZ Form token</h3>
 
-                    <p>If you&#39;re running eZ Publish 5, deactivate your eZ Form token legacy extension.</p>
+                    <p>If you&#39;re running eZ Publish 5, deactivate your eZ Form token legacy extension and disable the form token in ez Publish 5.</p>
                     
 <h3>eZ Demo design</h3>
 
