Added websitetoolbar/use to list of required permissions

--- a/index.html
+++ b/index.html
@@ -688,6 +688,8 @@ toggle(); // false</code></pre>
                     <p>Also, your editor users need the right set of permissions and policies. We do not require any special permissions over what eZ Publish would normally require, but do make sure the settings are indeed intact.</p>
                     <p>For a normal editor you should assign the following permissions:</p>
                     <ul>
+                        <li><code>websitetoolbar/use</code>
+                        </li>
                         <li><code>content/create</code>
                         </li>
                         <li><code>content/edit</code>
