--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                                     </ul>
                                 </li>
                                 <li><a href="http://projects.ez.no/ezjscore" title="ezjscore at eZ Projects">ezjscore</a>  <strong>1.3.0</strong> or higher</li>
-                                <li><a href="https://github.com/ezsystems/ezwebin" title="ezwebin at GitHub">ezwebin</a>  <strong>1.8.0</strong> or higher</li>
                                 <li>Apache version <strong>1.3</strong> or <strong>2.x</strong> in <strong>prefork</strong> mode</li>
                                 <li>PHP version <strong>5.3</strong> or higher, 5.4 is recommended</li>
                                 <li>Database server: MySQL <strong>5</strong> (UTF-8 is required)</li>
@@ -682,13 +681,15 @@ toggle(); // false</code></pre>
                     
 <h4>eZ Publish 5.x:</h4>
 
-<pre><code class="lang-twig">{% ez_legacy_include &quot;design:parts/website_toolbar.tpl&quot; with {
-    &#39;current_node_id&#39;: app.request.attributes.get(&#39;locationId&#39;)
-} %}</code></pre>
+<pre><code class="lang-twig">{% if location is defined %}
+    {% include &quot;design:parts/website_toolbar.tpl&quot; with {current_node_id: location.id } %}
+{% endif %}</code></pre>
 
                     <p>Also, your editor users need the right set of permissions and policies. We do not require any special permissions over what eZ Publish would normally require, but do make sure the settings are indeed intact.</p>
                     <p>For a normal editor you should assign the following permissions:</p>
                     <ul>
+                        <li><code>ezexceed/use</code>
+                        </li>
                         <li><code>content/create</code>
                         </li>
                         <li><code>content/edit</code>
